--- a/index.css
+++ b/index.css
@@ -2,14 +2,44 @@ body{
     background-color: #79d3c7;
 }
 .box{
+
     background-color: whitesmoke;
-    height: 250px;
-    width: 400px;
+    height: 200px;
+    width: 450px;
     border-radius: 10px;
     border: 4px solid #22a190;
     box-shadow:
     -10px 0 80px rgb(245, 245, 245),        /* outer left magenta */
-    10px 0 80px rgb(217, 255, 0);         /* outer right cyan */
+    10px 0 80px rgb(254, 255, 251);         /* outer right cyan */
     align-items: center;
+    padding-left: 0%;
     margin: 15%  auto;
+    border-style:ridge;
 }
+h2{
+    margin: 20px 10px 20px 10px;
+    font-style: oblique;
+    color: #065e52;;
+}
+.author{
+    color: #065e52;
+    float: right;
+    margin: 5px 10px 10px 0px;
+    
+}
+.lower-box{
+    padding-top: 50px;
+}
+.new-quote{
+    float: right;
+    margin: 0px 10px;
+    color: whitesmoke;
+    border-radius: 3px;
+    border: 2px solid #22a190;
+    padding: 6px;
+    background-color:#22a190
+}
+a{
+    margin: 0px 0px 0px 10px;
+}
+
