--- a/index.css
+++ b/index.css
@@ -1,6 +1,11 @@
 body{
     background-color: #22a190;
 }
+.tag{
+    text-align: center;
+    /* margin: 25%  auto; */
+    font-style: oblique;
+}
 .box{
 
     background-color: whitesmoke;
@@ -13,7 +18,7 @@ body{
     10px 0 80px rgb(135, 235, 226);         /* outer right cyan */
     align-items: center;
     padding-left: 0%;
-    margin: 15%  auto;
+    margin: 15%  auto 5px auto;
     border-style:groove;
 }
 h2{
